--- a/files/.config/i3/config
+++ b/files/.config/i3/config
@@ -238,7 +238,7 @@ bindsym $mod+d exec rofi -show run -config $HOME/.config/i3/rofi.conf
 exec_always --no-startup-id feh --no-fehbg --bg-scale $(xdg-user-dir PICTURES)/wallpaper.png
 
 # screen lock
-exec --no-startup-id xautolock -detectsleep -time 10 -locker "screenlock; xset dpms force off" -killtime 15 -killer "systemctl suspend"
+exec --no-startup-id xss-lock "screenlock -n"
 
 # applications
 exec firefox
